assignment-5-controllers:completed

--- a/app/templates/player_bar.html
+++ b/app/templates/player_bar.html
@@ -14,20 +14,21 @@
 
         <!-- This is the assignment for checkpoint 4-->
 
-        <div class="control-group main-controls">
+        <!-- <div class="control-group main-controls">
             <a class="previous">
                 <span class="ion-skip-backward"></span>
             </a>
             <a class="play-pause" ng-click="clicked = true" ng-show="!playing && !clicked" ng-hide="playing && clicked">
                 <span class="ion-play"></span>
             </a>
-            <a class="album-song-button" ng-show="playing"><span class="ion-pause"></span></a>
 
             <a class="next">
                 <span class="ion-skip-forward"></span>
             </a>
-        </div>
+        </div> -->
         <!-- end of assignment -->
+
+
 
 
         <div class="control-group currently-playing">
