--- a/app/templates/player_bar.html
+++ b/app/templates/player_bar.html
@@ -1,6 +1,6 @@
 <section class="player-bar">
     <div class="container">
-        <div class="control-group main-controls">
+        <!-- <div class="control-group main-controls">
             <a class="previous">
                 <span class="ion-skip-backward"></span>
             </a>
@@ -10,11 +10,11 @@
             <a class="next">
                 <span class="ion-skip-forward"></span>
             </a>
-        </div>
+        </div> -->
 
         <!-- This is the assignment for checkpoint 4-->
 
-        <!-- <div class="control-group main-controls">
+        <div class="control-group main-controls">
             <a class="previous">
                 <span class="ion-skip-backward"></span>
             </a>
@@ -22,10 +22,14 @@
                 <span class="ion-play"></span>
             </a>
 
+            <a class="play-pause" ng-click="clicked = true" ng-show="playing && clicked">
+                <span class="ion-pause"></span>
+            </a>
+
             <a class="next">
                 <span class="ion-skip-forward"></span>
             </a>
-        </div> -->
+        </div>
         <!-- end of assignment -->
 
 
