--- a/app/templates/album.html
+++ b/app/templates/album.html
@@ -20,21 +20,28 @@
 <!-- /assignment checkpoint 5-->
 
      </section>
-     <table class="album-view-song-list" ng-repeat="values in album.albumData.songs">
+     <table class="album-view-song-list" ng-repeat="song in album.albumData.songs">
          <tr class="album-view-song-item" ng-mouseover="hovered = true" ng-mouseleave="hovered = false">
            <td class="song-item-number">
-             <span ng-show="!song.playing && !hovered">{{$index+1}}.</span>
+             <!-- <span ng-show="!song.playing && !hovered">{{$index+1}}.</span>
              <a class="album-song-button" ng-show="hovered && !song.playing" ng-click="album.songPlayer.play(song)"><span class="ion-play"></span></a>
-             <a class="album-song-button" ng-show="song.playing" ng-click="album.songPlayer.pause(song)"><span class="ion-pause"></span></a>
+             <a class="album-song-button" ng-show="song.playing" ng-click="album.songPlayer.pause(song)"><span class="ion-pause"></span></a> -->
+
+<!-- assignment checkpoint 7 - Replace all instances when these two lines of code are used together with the playSong function. -->
+             <span ng-show="!SongPlayer.playsong(song) && !hovered">{{$index+1}}.</span>
+             <a class="album-song-button" ng-show="hovered && !SongPlayer.playsong(song)" ng-click="album.songPlayer.play(song)"><span class="ion-play"></span></a>
+             <a class="album-song-button" ng-show="SongPlayer.playsong(song)" ng-click="album.songPlayer.pause(song)"><span class="ion-pause"></span></a>
+<!-- end assignment checkpoint 7 -->
           </td>
+
              <!-- <td class="song-item-title">Blue</td>
              <td class="song-item-duration">3:31</td> -->
 
 
 <!-- assignment checkpoint 5-->
 
-             <td class="song-item-title">{{values.title}}</td>
-             <td class="song-item-duration">{{values.duration}}</td>
+             <td class="song-item-title">{{song.title}}</td>
+             <td class="song-item-duration">{{song.duration}}</td>
 
 <!-- /assignment -->
          </tr>
