checkpoint-8-services-part-3:completed

--- a/app/templates/player_bar.html
+++ b/app/templates/player_bar.html
@@ -1,36 +1,28 @@
-<section class="player-bar">
+<section class="player-bar" ng-controller="PlayerBarCtrl as playerBar">
     <div class="container">
-        <!-- <div class="control-group main-controls">
-            <a class="previous">
-                <span class="ion-skip-backward"></span>
-            </a>
-            <a class="play-pause">
-                <span class="ion-play"></span>
-            </a>
-            <a class="next">
-                <span class="ion-skip-forward"></span>
-            </a>
-        </div> -->
-
-        <!-- This is the assignment for checkpoint 4-->
 
         <div class="control-group main-controls">
-            <a class="previous">
+            <a class="previous" ng-click="playerBar.songPlayer.previous()">
                 <span class="ion-skip-backward"></span>
             </a>
-            <a class="play-pause" ng-click="clicked = true" ng-show="!playing && !clicked" ng-hide="playing && clicked">
-                <span class="ion-play"></span>
-            </a>
 
-            <a class="play-pause" ng-click="clicked = true" ng-show="playing && clicked">
-                <span class="ion-pause"></span>
+            <a class="play-pause">
+              <span class="ion-play"
+                    ng-show="!playerBar.songPlayer.currentSong.playing"
+                    ng-click="playerBar.songPlayer.play()">
+              </span>
+
+              <span class="ion-pause"
+                    ng-show="playerBar.songPlayer.currentSong.playing"
+                    ng-click="playerBar.songPlayer.pause()">
+              </span>
             </a>
 
             <a class="next">
                 <span class="ion-skip-forward"></span>
             </a>
         </div>
-        <!-- end of assignment -->
+
 
 
 
