--- a/app/templates/player_bar.html
+++ b/app/templates/player_bar.html
@@ -19,16 +19,13 @@
             </a>
 
             <a class="next">
-                <span class="ion-skip-forward"></span>
+                <span class="ion-skip-forward" ng-click="playerBar.songPlayer.next()"></span>
             </a>
         </div>
 
 
-
-
-
         <div class="control-group currently-playing">
-            <h2 class="song-name"></h2>
+            <h2 class="song-name">{{playerBar.songPlayer.currentSong.title}}</h2>
             <h2 class="artist-song-mobile"></h2>
             <h3 class="artist-name"></h3>
             <div class="seek-control">
