--- a/app/templates/player_bar.html
+++ b/app/templates/player_bar.html
@@ -27,12 +27,9 @@
         <div class="control-group currently-playing">
             <h2 class="song-name">{{playerBar.songPlayer.currentSong.title}}</h2>
             <h2 class="artist-song-mobile"></h2>
-            <h3 class="artist-name"></h3>
+            <h3 class="artist-name">{{album.albumData.artist}}</h3>
             <div class="seek-control">
-                <div class="seek-bar">
-                    <div class="fill"></div>
-                    <div class="thumb"></div>
-                </div>
+                <seek-bar></seek-bar>
                 <div class="current-time"></div>
                 <div class="total-time"></div>
             </div>
