--- a/app/templates/player_bar.html
+++ b/app/templates/player_bar.html
@@ -29,8 +29,8 @@
             <h2 class="artist-song-mobile"></h2>
             <h3 class="artist-name">{{album.albumData.artist}}</h3>
             <div class="seek-control">
-                <seek-bar value="{{ playerBar.songPlayer.currentTime }}" max="{{ playerBar.songPlayer.currentSong.duration }}" on-change="playerBar.songPlayer.setCurrentTime(value)"></seek-bar>
-                <div class="current-time"></div>
+                <seek-bar value="{{ playerBar.songPlayer.currentTime }}" max="{{ playerBar.songPlayer.currentSong.duration }}" on-change=playerBar.songPlayer.setCurrentTime(value)></seek-bar>
+                <div class="current-time">{{playerBar.songPlayer.currentSong.duration}}</div>
                 <div class="total-time"></div>
             </div>
         </div>
